--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -1,2 +1,23 @@
 @charset "utf-8";
 @namespace epub "http://www.idpf.org/2007/ops";
+
+span[epub|type~="subtitle"]{
+	display: block;
+	font-weight: normal;
+}
+
+.label{
+	border: 1px solid;
+}
+
+.newspaper header{
+	font-variant: small-caps;
+}
+
+.signature{
+	font-variant: small-caps;
+}
+
+.account{
+	
+}
