--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -10,6 +10,7 @@ span[epub|type~="subtitle"]{
 	border: 1px solid;
 }
 
+[epub|type~="z3998:letter"] header,
 .newspaper header{
 	font-variant: small-caps;
 }
@@ -18,6 +19,16 @@ span[epub|type~="subtitle"]{
 	font-variant: small-caps;
 }
 
-.account{
-	
+.inscription{
+	font-variant: small-caps;
 }
+
+#chapter-5 blockquote:nth-of-type(1) td:nth-of-type(1){
+	padding-right: 1em;
+}
+
+#chapter-5 blockquote:nth-of-type(1) tr:nth-of-type(3) td:nth-of-type(2){
+	border-top: 1px solid;
+	padding-bottom: 1em;
+}
+
