--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -53,6 +53,14 @@ figure.full-page{
 	}
 }
 
+@supports(display: grid){
+	figure.full-page{
+		display: grid;
+		grid-template-rows: 1fr auto;
+		max-height: 100%;
+	}
+}
+
 /* In all cases, also include the below styles */
 figure img{
 	display: block;
