Add telegram class

--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -18,6 +18,10 @@ footer{
 	font-variant: small-caps;
 }
 
+.telegram{
+	font-variant: all-small-caps;
+}
+
 #chapter-5 blockquote td:first-child{
 	padding-right: 1em;
 }
