--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -35,38 +35,19 @@ footer{
 	font-variant-numeric: tabular-nums;
 }
 
-/* If the image is meant to be on its own page, use this selector... */
-figure.full-page{
-	break-after: page;
-	break-before: page;
-	margin: 0;
-	max-height: 100vh;
-	text-align: center;
+figure{
+	break-inside: avoid;
+	margin: 1em 2.5em;
 }
 
-@supports(display: flex){
-	figure.full-page{
-		display: flex;
-		flex-direction: column;
-	}
-
-	figure.full-page img{
-		height: 100vh;
-		object-fit: contain;
-	}
-}
-
-@supports(display: grid){
-	figure.full-page{
-		display: grid;
-		grid-template-rows: 1fr auto;
-		max-height: 100%;
-	}
-}
-
-/* In all cases, also include the below styles */
 figure img{
 	display: block;
 	margin: auto;
+	max-height: 100vh;
 	max-width: 100%;
+}
+
+figure.full-page{
+	break-after: page;
+	break-before: page;
 }
